# cclipboard

./: .gitignore  .gitmodules  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cclipboard.pc.in  install_manifest.txt
src/: cclipboard.cc
src/include/: cclipboard-config.h.in  cclipboard-x11.h  cclipboard.h  cclipboard_data.h  cclipboard_options.h  cclipboard_paste-x11.h  cclipboard_utils.h
test/: CMakeLists.txt  test.sh  test_basics.cpp
